# clang-tools-extra

clang-tidy/pagesjaunes/: ASTProtoGeneration.h  CCharList.cpp  CCharList.h  CCharToCXXString.cpp  CCharToCXXString.h  CMakeLists.txt  DeIncludePreProC.cpp  DeIncludePreProC.h  Doxyfile  ExecSQLAllocateToFunctionCall.cpp  ExecSQLAllocateToFunctionCall.h  ExecSQLCloseToFunctionCall.cpp  ExecSQLCloseToFunctionCall.h  ExecSQLCommon.cpp  ExecSQLCommon.h  ExecSQLDeclareToFunctionCall.cpp  ExecSQLDeclareToFunctionCall.h  ExecSQLFetchToFunctionCall.cpp  ExecSQLFetchToFunctionCall.h  ExecSQLForToFunctionCall.cpp  ExecSQLForToFunctionCall.h  ExecSQLFreeToFunctionCall.cpp  ExecSQLFreeToFunctionCall.h  ExecSQLLOBCloseToFunctionCall.cpp  ExecSQLLOBCloseToFunctionCall.h  ExecSQLLOBCreateToFunctionCall.cpp  ExecSQLLOBCreateToFunctionCall.h  ExecSQLLOBFreeToFunctionCall.cpp  ExecSQLLOBFreeToFunctionCall.h  ExecSQLLOBOpenToFunctionCall.cpp  ExecSQLLOBOpenToFunctionCall.cpp.rej  ExecSQLLOBOpenToFunctionCall.h  ExecSQLLOBReadToFunctionCall.cpp  ExecSQLLOBReadToFunctionCall.h  ExecSQLOpenToFunctionCall.cpp  ExecSQLOpenToFunctionCall.h  ExecSQLPrepareFmtdToFunctionCall.cpp  ExecSQLPrepareFmtdToFunctionCall.h  ExecSQLPrepareToFunctionCall.cpp  ExecSQLPrepareToFunctionCall.h  (+6 more)
clang-tidy/pagesjaunes/doc/html/: _c_char_to_c_x_x_string_8cpp.html  _c_char_to_c_x_x_string_8cpp__incl.map  _c_char_to_c_x_x_string_8cpp_source.html  _c_char_to_c_x_x_string_8h.html  _c_char_to_c_x_x_string_8h__dep__incl.map  _c_char_to_c_x_x_string_8h__dep__incl.md5  _c_char_to_c_x_x_string_8h__incl.map  _c_char_to_c_x_x_string_8h__incl.md5  _c_char_to_c_x_x_string_8h_source.html  _de_include_pre_pro_c_8cpp.html  _de_include_pre_pro_c_8cpp__incl.map  _de_include_pre_pro_c_8cpp_source.html  _de_include_pre_pro_c_8h.html  _de_include_pre_pro_c_8h__dep__incl.map  _de_include_pre_pro_c_8h__dep__incl.md5  _de_include_pre_pro_c_8h__incl.map  _de_include_pre_pro_c_8h_source.html  _exec_s_q_l_allocate_to_function_call_8cpp.html  _exec_s_q_l_allocate_to_function_call_8cpp__incl.map  _exec_s_q_l_allocate_to_function_call_8cpp_source.html  _exec_s_q_l_allocate_to_function_call_8h.html  _exec_s_q_l_allocate_to_function_call_8h__dep__incl.map  _exec_s_q_l_allocate_to_function_call_8h__incl.map  _exec_s_q_l_allocate_to_function_call_8h__incl.md5  _exec_s_q_l_allocate_to_function_call_8h_source.html  _exec_s_q_l_close_to_function_call_8cpp.html  _exec_s_q_l_close_to_function_call_8cpp__incl.map  _exec_s_q_l_close_to_function_call_8cpp_source.html  _exec_s_q_l_close_to_function_call_8h.html  _exec_s_q_l_close_to_function_call_8h__dep__incl.map  _exec_s_q_l_close_to_function_call_8h__incl.map  _exec_s_q_l_close_to_function_call_8h_source.html  _exec_s_q_l_common_8cpp.html  _exec_s_q_l_common_8cpp__incl.map  _exec_s_q_l_common_8cpp_source.html  _exec_s_q_l_common_8h.html  _exec_s_q_l_common_8h__dep__incl.map  _exec_s_q_l_common_8h__incl.map  _exec_s_q_l_common_8h_source.html  _exec_s_q_l_fetch_to_function_call_8cpp.html  (+952 more)
clang-tidy/pagesjaunes/doc/latex/: _c_char_to_c_x_x_string_8cpp.tex  _c_char_to_c_x_x_string_8cpp__incl.md5  _c_char_to_c_x_x_string_8h.tex  _c_char_to_c_x_x_string_8h__dep__incl.md5  _c_char_to_c_x_x_string_8h__incl.md5  _de_include_pre_pro_c_8cpp.tex  _de_include_pre_pro_c_8cpp__incl.md5  _de_include_pre_pro_c_8h.tex  _de_include_pre_pro_c_8h__dep__incl.md5  _de_include_pre_pro_c_8h__incl.md5  _exec_s_q_l_allocate_to_function_call_8cpp.tex  _exec_s_q_l_allocate_to_function_call_8cpp__incl.md5  _exec_s_q_l_allocate_to_function_call_8h.tex  _exec_s_q_l_allocate_to_function_call_8h__dep__incl.md5  _exec_s_q_l_allocate_to_function_call_8h__incl.md5  _exec_s_q_l_close_to_function_call_8cpp.tex  _exec_s_q_l_close_to_function_call_8cpp__incl.md5  _exec_s_q_l_close_to_function_call_8h.tex  _exec_s_q_l_close_to_function_call_8h__dep__incl.md5  _exec_s_q_l_close_to_function_call_8h__incl.md5  _exec_s_q_l_common_8cpp.tex  _exec_s_q_l_common_8cpp__incl.md5  _exec_s_q_l_common_8h.tex  _exec_s_q_l_common_8h__dep__incl.md5  _exec_s_q_l_common_8h__incl.md5  _exec_s_q_l_fetch_to_function_call_8cpp.tex  _exec_s_q_l_fetch_to_function_call_8cpp__incl.md5  _exec_s_q_l_fetch_to_function_call_8h.tex  _exec_s_q_l_fetch_to_function_call_8h__dep__incl.md5  _exec_s_q_l_fetch_to_function_call_8h__incl.md5  _exec_s_q_l_for_to_function_call_8cpp.tex  _exec_s_q_l_for_to_function_call_8cpp__incl.md5  _exec_s_q_l_for_to_function_call_8h.tex  _exec_s_q_l_for_to_function_call_8h__dep__incl.md5  _exec_s_q_l_for_to_function_call_8h__incl.md5  _exec_s_q_l_free_to_function_call_8cpp.tex  _exec_s_q_l_free_to_function_call_8cpp__incl.md5  _exec_s_q_l_free_to_function_call_8h.tex  _exec_s_q_l_free_to_function_call_8h__dep__incl.md5  _exec_s_q_l_free_to_function_call_8h__incl.md5  (+498 more)
clang-tidy/pagesjaunes/doc/rtf/: _c_char_to_c_x_x_string_8cpp__incl.md5  _de_include_pre_pro_c_8cpp__incl.md5  _de_include_pre_pro_c_8h__incl.md5  _exec_s_q_l_allocate_to_function_call_8cpp__incl.md5  _exec_s_q_l_allocate_to_function_call_8h__dep__incl.md5  _exec_s_q_l_common_8cpp__incl.md5  (+173 more)
clang-tidy/pagesjaunes/test/: allocate_regex_test.cpp  allocate_regex_test.h  backup_file.cpp  backup_file.h  buffer_split.cpp  buffer_split.h  buffer_split.test.h  buffer_split.test2.h  buffer_split_cpp.txt  buffer_split_std.txt  close_regex_test.cpp  close_regex_test.h  declare_regex_test.cpp  declare_regex_test.h  decode_host_vars.cpp  decode_host_vars.h  fetch_decode_host_var.cpp  fetch_decode_host_var.h  fetch_fileline_test.cpp  fetch_fileline_test.h  fetch_regex_test.cpp  fetch_regex_test.h  fetch_tmpl_repeat_members2_test.cpp  fetch_tmpl_repeat_members2_test.h  fetch_tmpl_repeat_members_test.cpp  fetch_tmpl_repeat_members_test.h  fetch_tmpl_repeat_test.cpp  fetch_tmpl_repeat_test.h  free_regex_test.cpp  free_regex_test.h  lob_create_regex_test.cpp  lob_create_regex_test.h  lob_open_regex_test.cpp  lob_open_regex_test.h  lob_read_regex_test.cpp  lob_read_regex_test.h  open_regex_test.cpp  open_regex_test.h  open_request_test.cpp  open_request_test.h  (+3 more)
clang-tidy/tool/: CMakeLists.txt  ClangTidyMain.cpp
(+96 files in other folders)
